--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="style/header.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans?Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/media.css">
 	<link rel="shortcut icon" href="img/butterfly_animal_icon_141833.ico" type="image/x-icon">
 	<title>Ink Tattoo</title>
@@ -23,17 +23,17 @@
 					</div>
 					<div class="menu__body">
 						<ul class="menu__list">
-							<li><a href="" class="menu__link">Home</a></li>
-							<li><a href="#about" class="menu__link">About</a></li>
-							<li><a href="#gallery" class="menu__link">Gallery</a></li>
-							<li><a href="" class="menu__link">FAQ</a></li>
-							<li><a href="#map" class="menu__link">Find Us</a></li>
-							<li><a href="#contact" class="menu__link">Contact</a></li>
+							<li><a class="menu__link" href="#">Home</a></li>
+							<li><a class="menu__link" href="#about">About</a></li>
+							<li><a class="menu__link" href="#gallery" >Gallery</a></li>
+							<li><a class="menu__link" href="#" >FAQ</a></li>
+							<li><a class="menu__link" href="#map">Find Us</a></li>
+							<li><a class="menu__link" href="#contact" >Contact</a></li>
 						</ul>
 					</div>
 				</nav>
 				<div class="header__logo">
-					<img src="img/logo.png" alt="">
+					<a href=""><img src="img/logo.png" alt=""></a>
 				</div>
 			</div>
 		</header> <!--!Header and NAV end-->
@@ -302,7 +302,7 @@
 
 
 		<!-- ?Section map start -->
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23984.875032060387!2d69.263902!3d41.2847239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1589984049198!5m2!1sru!2s" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d23984.875032060387!2d69.263902!3d41.2847239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2s!4v1589984049198!5m2!1sru!2s" style="width: 100%; height: 450px; border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 
 
