--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="fonts/fonts.css">
 	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="style/header.css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans?Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style/media.css">
 	<link rel="shortcut icon" href="img/butterfly_animal_icon_141833.ico" type="image/x-icon">
 	<title>Ink Tattoo</title>
